--- a/LP2Soft/Home/frmHome.resx
+++ b/LP2Soft/Home/frmHome.resx
@@ -120,80 +120,79 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAEGSURBVFhH7ZRBDsIgEEXZexZvYOLGs3gtE6/hxoV38CZu
-        ddp5oTRaGchAN33JJGX4H34KbXg3IlhB7w7L50Gf8pA6MV2MLuHzBqqCqNX3CIqCqKXNHTAFUWnDS4ht
-        EWRRJ49XqR3Db0Z1AdgWQZYGGHhK7WnN0Xk72MxgG3hJnWlP6JwdbGawpcyPRHt2sEVolzIdiY7tjKYE
-        2jXokeizHfaN0K5h1QB+R5ADW4rvJcyBbaDPZ4gs6hj2+xEhSwNcpNb7FWdBbwbbIsi2AFuAdgGssHwe
-        9O6wfB7RHqRuo8sANn9kbVMQ5O2QPf4GQdYe2etnEKb7IXvOgtDuj+x9lLozdCKED0TtuuFo6JpNAAAA
-        AElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAQZJREFUWEftlEEOwiAQRdl7Fm9g4sazeC0Tr+HGhXfwJm512nmhNFoZyEA3fckk
+        ZfgffgpteDciWEHvDsvnQZ/ykDoxXYwu4fMGqoKo1fcIioKopc0dMAVRacNLiG0RZFEnj1epHcNvRnUB
+        2BZBlgYYeErtac3ReTvYzGAbeEmdaU/onB1sZrClzI9Ee3awRWiXMh2Jju2MpgTaNeiR6LMd9o3QrmHV
+        AH5HkANbiu8lzIFtoM9niCzqGPb7ESFLA1yk1vsVZ0FvBtsiyLYAW4B2AaywfB707rB8HtEepG6jywA2
+        f2RtUxDk7ZA9/gZB1h7Z62cQpvshe86C0O6P7H2UujN0IoQPRO264Wjomk0AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnProfesores.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAGKSURBVFhH7Za7SsRAFIazyIJYKLIgK+w7CIogNnZrYbew
-        IDb6Aja2ij6BD6CgnY29pb0iWPkE6wso4gW8xO9MjmGDkzGbmWCTDz42e+bMP0NuJKopShzHHewHsqOx
-        xdGJoehrbHFkUjI3CKU28L+XoCYPTmcZ3PcADQ1cxxN1A8d0OAP1MuRvgMEmXpi2LJfY1LYUauclXNLp
-        v2HwAPPY17bqYJH7ZC0rA22rDhZ5S9ay8qptTujbQdup/9F5CW4xjxttc0KfLOLCeRPKm8rGF3a1LYWa
-        PDGHOKclvw0INGzhg2lNkONNHc5Afc90xPETrmnZH8KmcBW7OKnlDNR7+InCCy7qkD+ETeMCLuOEllOo
-        zeMzCnJ5ejrkB0EtPMbhp+Edj7ClPbM4/Ljumsm+EDSDdybSjoy18dr8SzjDhkb4QdCpiXTzqL/CFY7r
-        dD8IklP/IakFGWBbp/tD2IqJLUbYO14gMO8FZGNbp4WD0FE2MPpH5V9IaJJdiHoDlWxglO/++rs+EFH0
-        DR27d/nXtUCkAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAYpJREFUWEftlrtKxEAUhrPIglgosiAr7DsIiiA2dmtht7AgNvoCNraKPoEPoKCd
+        jb2lvSJY+QTrCyjiBbzE70yOYYOTMZuZYJMPPjZ75sw/Q24kqilKHMcd7Aeyo7HF0Ymh6GtscWRSMjcI
+        pTbwv5egJg9OZxnc9wANDVzHE3UDx3Q4A/Uy5G+AwSZemLYsl9jUthRq5yVc0um/YfAA89jXtupgkftk
+        LSsDbasOFnlL1rLyqm1O6NtB26n/0XkJbjGPG21zQp8s4sJ5E8qbysYXdrUthZo8MYc4pyW/DQg0bOGD
+        aU2Q400dzkB9z3TE8ROuadkfwqZwFbs4qeUM1Hv4icILLuqQP4RN4wIu44SWU6jN4zMKcnl6OuQHQS08
+        xuGn4R2PsKU9szj8uO6ayb4QNIN3JtKOjLXx2vxLOMOGRvhB0KmJdPOov8IVjut0PwiSU/8hqQUZYFun
+        +0PYioktRtg7XiAw7wVkY1unhYPQUTYw+kflX0hokl2IegOVbGCU7/76uz4QUfQNHbt3+de1QKQAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="btnAsesores.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAHESURBVFhHxddNSsNQGIXhjrqKOlGkOxB3aHUROtFJKeIi
-        xB04d+DPQAQrOlCh9dxzX5vGr5Gm3OgDH5hzbm76E4rpfZvP533NoeZeU9qdZqTpc7mIBV0bcblIZRfv
-        /KcHLhexwIiKYVsjiuiNqBi2NaKI3oiKYVsjiuiNqBi2XXZNVaEwomLYtoaqQm5EK6ne0kw0L8y5Zki9
-        kvqAqkJuRIGqdPEnL6pL2YBlQV5Ss9lXoCq98yZjlgX0RhTRG1GgKn3kTaYsC+iNKKI3okDVby/gmWUB
-        vRFF9EYUqEo3XJMJywJ6I4rojShQNdQ03YS7LAvykprNfwdUDzRjzZRJN2bjxRP1AVWF3IiKYdsaqgq5
-        ERXDtsvafQWKdjRnmhvNo+ZCc8Skv1OWulPNNqctKFsgiuiNyHS4r3lzsZ5XzR6nW44zoojeiEyHVzlt
-        5ZLTjcyIInojMh1+5LSVd043MiOK6I3IdDjLaSszTjeyZevfhDo80Xy6WE9ae8zpluM6qgq5ERXDtjVU
-        FXIjKoZtl/3fv2REEb0RFcO2RhTRG1ExbGtEkbr0ANm1Wy4XqfyLh9MDLhepTI/n6UV08Uk0PJ73el83
-        3FYHAIIxRQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnCursos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAADgSURBVFhH7ZYxCsJAEEUDWip6EcHWM1hKsBY8gKV4Hm0s
-        9Bi2thYW4kHi28kXAhthIbsQYR+8ZmaY+awWKXpHVVVTPOAJz7HVmXYYmOEbk6FTPvSGeLephOicD71F
-        PWJccKRWZ9jlnt9QyYfeqh4x1ipHgX1BAcp6xChVjgL7coAcIAfIAXKAHCAH+L8AO1yiq8XwhobO+dBz
-        g8nROR96vQrwxA1+n7CrQT9B86N0q3IU2Bf0J2x+ll9xrFZn2BUUYIAPm0qIzrVDf44vm0yETv2GmQnu
-        8Yju6aKqM32hKD73w9TPuu3PKAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAcRJREFUWEfF101Kw1AYheGOuoo6UaQ7EHdodRE60Ukp4iLEHTh34M9ABCs6UKH1
+        3HNfm8avkabc6AMfmHNubvoTiul9m8/nfc2h5l5T2p1mpOlzuYgFXRtxuUhlF+/8pwcuF7HAiIphWyOK
+        6I2oGLY1oojeiIphWyOK6I2oGLZddk1VoTCiYti2hqpCbkQrqd7STDQvzLlmSL2S+oCqQm5Egap08Scv
+        qkvZgGVBXlKz2VegKr3zJmOWBfRGFNEbUaAqfeRNpiwL6I0oojeiQNVvL+CZZQG9EUX0RhSoSjdckwnL
+        AnojiuiNKFA11DTdhLssC/KSms1/B1QPNGPNlEk3ZuPFE/UBVYXciIph2xqqCrkRFcO2y9p9BYp2NGea
+        G82j5kJzxKS/U5a6U802py0oWyCK6I3IdLiveXOxnlfNHqdbjjOiiN6ITIdXOW3lktONzIgieiMyHX7k
+        tJV3TjcyI4rojch0OMtpKzNON7Jl69+EOjzRfLpYT1p7zOmW4zqqCrkRFcO2NVQVciMqhm2X/d+/ZEQR
+        vREVw7ZGFNEbUTFsa0SRuvQA2bVbLhep/IuH0wMuF6lMj+fpRXTxSTQ8nvd6XzfcVgcAgjFFAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="btnEventos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAABiSURBVFhH7ZQxCgAgDAP9/6frclRQXERthtyYSHOTbSYm
-        iI/hTEK8h3cJ8TGcSYgH5GVYwAIW0BHgW/gGs8ICxAvU13oLWEBX4DXMCgsQL1Bf6y1gAV2B1zBrASGB
-        KooFIjrNpNaosGbqkQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAGJJREFUWEftlDEKACAMA/3/p+tyVFBcRG2G3JhIc5NtJiaIj+FMQryHdwnxMZxJ
+        iAfkZVjAAhbQEeBb+AazwgLEC9TXegtYQFfgNcwKCxAvUF/rLWABXYHXMGsBIYEqigUiOs2k1qiwZuqR
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnCursos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAOBJREFUWEftljEKwkAQRQNaKnoRwdYzWEqwFjyApXgebSz0GLa2FhbiQeLbyRcC
+        G2EhuxBhH7xmZpj5rBYpekdVVVM84AnPsdWZdhiY4RuToVM+9IZ4t6mE6JwPvUU9YlxwpFZn2OWe31DJ
+        h96qHjHWKkeBfUEBynrEKFWOAvtygBwgB8gBcoAcIAf4vwA7XKKrxfCGhs750HODydE5H3q9CvDEDX6f
+        sKtBP0Hzo3SrchTYF/QnbH6WX3GsVmfYFRRggA+bSojOtUN/ji+bTIRO/YaZCe7xiO7poqozfaEoPvfD
+        1M+67c8oAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnPerfil.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAGiSURBVFhH7ZZNK0RhGIZnho2VhWJBs/GRslGIjY3FZMnC
-        WilZYWEhO4WsRcnXQlHKHhu/gY1foUQ+kjCu55x70jBnzJnzvlZz1VXT+97P/WTGdCZVo1ry+Xwb5mSr
-        jv3Dsm68wA8sYK/PsUsxP7BgGB8ximccUdwtFNtbfmdb/uAesxpzB6WnQX1lnGjMDRRm8T2orgzLtmk8
-        OZRNB7XxmNJ4cijbDDtjsaHx5FB2HHbG4kjjyaFsJ+yMxbbGk0PZUtgZi0WNJ4eywbAzFgMadwOFV2Fv
-        RVxjWqNuoHAUP639DyyT05hbKF4LVpRnRXE/sGAe7aHzEzubVcwvLGrBOdzDXVuMzbp2D+VNOISNOoqE
-        jD017f+lXUfVo7ItfEXjDe2v7sOMYpbLYD/uo2UKnGF1X0cGZ/DFWiJ4wBtpr6OwX0vrWK/q8hCsw0N0
-        zSU2aE1pCKTxwNKesI8k+p3gcjKI+WVB64rhohFvg4hfnvD3V5bD8eD6fxjT2m847A3vvGPPih6tLYaL
-        VQV8Yd3LWlcaAp1oH8eEY62zQ2tqiFTqC20mq/QW4UCkAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAaJJREFUWEftlk0rRGEYhmeGjZWFYkGz8ZGyUYiNjcVkycJaKVlhYSE7haxFyddC
+        UcoeG7+BjV+hRD6SMK7nnHvSMGfMmfO+VnPVVdP73s/9ZMZ0JlWjWvL5fBvmZKuO/cOybrzADyxgr8+x
+        SzE/sGAYHzGKZxxR3C0U21t+Z1v+4B6zGnMHpadBfWWcaMwNFGbxPaiuDMu2aTw5lE0HtfGY0nhyKNsM
+        O2OxofHkUHYcdsbiSOPJoWwn7IzFtsaTQ9lS2BmLRY0nh7LBsDMWAxp3A4VXYW9FXGNao26gcBQ/rf0P
+        LJPTmFsoXgtWlGdFcT+wYB7tofMTO5tVzC8sasE53MNdW4zNunYP5U04hI06ioSMPTXt/6VdR9Wjsi18
+        ReMN7a/uw4xilstgP+6jZQqcYXVfRwZn8MVaInjAG2mvo7BfS+tYr+ryEKzDQ3TNJTZoTWkIpPHA0p6w
+        jyT6neByMoj5ZUHriuGiEW+DiF+e8PdXlsPx4Pp/GNPabzjsDe+8Y8+KHq0thotVBXxh3ctaVxoCnWgf
+        x4RjrbNDa2qIVOoLbSar9BbhQKQAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnNovedades.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAC3SURBVFhH7dGxCcMwEIXhWyJNtnCVcTxAVsoArrJANsgW
-        rg0p0qRUztbvGHPGYJCEFPSBwCeddA8sVVW5xBi7YD8Zxi7YtweBMaYGMPILQBkMzxYUIBbGGPkFoNxF
-        a5DesgMcwVWj7ACUu2j90wBHcNUoOwDlJlp+2DbyCxALY4wsArz8pzvTG4W+P/gxK+/xoPPf7q7rRH9w
-        +vZtmrL2HA8aXZ+pTK+d0110PXTNvyO2XtdVROQLXzVGkDsf3nMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAALdJREFUWEft0bEJwzAQheFbIk22cJVxPEBWygCuskA2yBauDSnSpFTO1u8Yc8Zg
+        kIQU9IHAJ510DyxVVbnEGLtgPxnGLti3B4ExpgYw8gtAGQzPFhQgFsYY+QWg3EVrkN6yAxzBVaPsAJS7
+        aP3TAEdw1Sg7AOUmWn7YNvILEAtjjCwCvPynO9Mbhb4/+DEr7/Gg89/urutEf3D69m2asvYcDxpdn6lM
+        r53TXXQ9dM2/I7Ze11VE5AtfNUaQOx/ecwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
