--- a/LP2Soft/Mensajes/frmMensajeChat.resx
+++ b/LP2Soft/Mensajes/frmMensajeChat.resx
@@ -120,21 +120,21 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBoxEnviar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAL1SURBVGhD7ZjHyxNRHEVjF3vDhS7diWADQQS7G8GFgljA
-        AmIBQeETy9L/QBDEAoKIYsONC+tGQVDsvbsQy0rsHdu5mguPIWXypb3AHDgk+c1j5s7LvJLkMjIyoqYD
-        rsSjOEyFVmEwbsCX+CfvE4wa9fYUPIjf0cHtLYySfrgCb2MydOgkjIqJuB+/YTLs78Rn3VwU9EX1th6H
-        MKB9hD8SNbkam8pY3ImfMRnuPeqYZpsv+Zr8mX9VrT82HPf2DXSo0Cuo4z1xBobh7wXvd2NDcW9/Qoew
-        H1DHRqNJhj+JN4PP47Du9EH15nX0hUPd270wpFB4zTb+rBupK+7tj+iL2q94GCdgIQqF7457gtoqrDm9
-        Ub15FX2h0Lu4EUsNvGLhtSZ4oKtT9M3WjDS9PR3LUSy8WIOu71KhWnTiuXgGfeLQ+6jeHoBpSIY/hQ4v
-        wtVYHdZuhuJ21BztE1oF0HM6HiuhXHiNFR/T41kVF9Ens3q29RW3Z1EpF17sRR/XGKuK4+iT2SM4Cisl
-        TXg9gm6jtSI53VaMZprN+AZ9YalN1jFMu7howxYuaIXCi7XoNjtUqBXqCZ38FfoC9jxOw2KkDS/uoNuN
-        UaHWaL+iG3mBvpDVjczCkErCq63bXVKhnnTFxaifd76ovYaacrUVSBte7EO3XaZCI9CNLMen6IvbX8H7
-        E1gq/EDUIqi2mrL1TTeUzqhvRAuaQ9vTWCq8aEO336ZCs+iI8/AtOtA6LIV+xD9Atx+JTUcziH/PPsdu
-        WIzJ6PAXVIgFDVoHK7WiHkC3W6pCLGiP5GDPsAsmGYT+N+Id9sCoOIu+iSUqJFiPPr5VhdjQCu2Aj1Gz
-        ldHgfYg+PgKjRCu0Qy5QIc9UdF1tomUmOqi24ppqxSF0fZEKMXMZHXYOhoNXa0Z0gzfJbPQN6C+XTcHn
-        LRg9GrDh/6DhJm84tgTz0aHtOWwZOmG455ELsaXQYubwr7HcLjU6tJDp15ZuoNwuNVr0KA35/zYjIyPj
-        H7ncX98XZBpm3zJIAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAvVJREFUaEPtmMfLE1EcRWMXe8OFLt2JYANBBLsbwYWCWMACYgFB4RPL0v9AEMQC
+        gohiw40L60ZBUOy9uxDLSuwd27maC48hZfKlvcAcOCT5zWPmzsu8kuQyMjKipgOuxKM4TIVWYTBuwJf4
+        J+8TjBr19hQ8iN/Rwe0tjJJ+uAJvYzJ06CSMiom4H79hMuzvxGfdXBT0RfW2HocwoH2EPxI1uRqbyljc
+        iZ8xGe496phmmy/5mvyZf1WtPzYc9/YNdKjQK6jjPXEGhuHvBe93Y0Nxb39Ch7AfUMdGo0mGP4k3g8/j
+        sO70QfXmdfSFQ93bvTCkUHjNNv6sG6kr7u2P6Ivar3gYJ2AhCoXvjnuC2iqsOb1RvXkVfaHQu7gRSw28
+        YuG1Jnigq1P0zdaMNL09HctRLLxYg67vUqFadOK5eAZ94tD7qN4egGlIhj+FDi/C1Vgd1m6G4nbUHO0T
+        WgXQczoeK6FceI0VH9PjWRUX0Sezerb1FbdnUSkXXuxFH9cYq4rj6JPZIzgKKyVNeD2CbqO1IjndVoxm
+        ms34Bn1hqU3WMUy7uGjDFi5ohcKLteg2O1SoFeoJnfwV+gL2PE7DYqQNL+6g241RodZov6IbeYG+kNWN
+        zMKQSsKrrdtdUqGedMXFqJ93vqi9hppytRVIG17sQ7ddpkIj0I0sx6foi9tfwfsTWCr8QNQiqLaasvVN
+        N5TOqG9EC5pD29NYKrxoQ7ffpkKz6Ijz8C060DoshX7EP0C3H4lNRzOIf88+x25YjMno8BdUiAUNWgcr
+        taIeQLdbqkIsaI/kYM+wCyYZhP434h32wKg4i76JJSokWI8+vlWF2NAK7YCPUbOV0eB9iD4+AqNEK7RD
+        LlAhz1R0XW2iZSY6qLbimmrFIXR9kQoxcxkddg6Gg1drRnSDN8ls9A3oL5dNwectGD0asOH/oOEmbzi2
+        BPPRoe05bBk6YbjnkQuxpdBi5vCvsdwuNTq0kOnXlm6g3C41WvQoDfn/NiMjI+Mfudxf3xdkGmbfMkgA
+        AAAASUVORK5CYII=
 </value>
   </data>
 </root>
