--- a/LP2Soft/Properties/Resources.resx
+++ b/LP2Soft/Properties/Resources.resx
@@ -177,6 +177,7 @@
   </data>
   <data name="heart_empty_icon_178700" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\heart_empty_icon_178700.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+	   </data>
   <data name="configuraciones (4)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\configuraciones (4).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -290,6 +291,7 @@
   </data>
   <data name="star-full" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\star-full.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+	   </data>
   <data name="like_favorite_heart_5759" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\like_favorite_heart_5759.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -319,6 +321,7 @@
   </data>
   <data name="campus-pucp-cia-letras-2020_03-1920x1080-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\campus-pucp-cia-letras-2020_03-1920x1080-1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+	   </data>
   <data name="Logo_INFunables" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo_INFunables.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
